objects/revcult__Batch_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>revcult__DC_Batch_Promises__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do this if you&apos;re getting timeout errors on page load on the js side (e.g. Visualforce Remoting Exception: Unable to connect to the server (transaction aborted: timeout)). This should fix it, but slow down the load.</inlineHelpText>
        <label>DC Batch Promises</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__DC_getFields__c</fullName>
        <inlineHelpText>Defaults to 10 unless set here. Set the number to gradually lower than 10 if encountering an apex side issue on page load (e.g. CPU time limit exceeded). Controls how many objects are sent to apex per batch to retrieve fields.</inlineHelpText>
        <label>DC getFields</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__ExternalUserIdBatch__c</fullName>
        <inlineHelpText>Controls the batch size on the ExternalUserIdBatch in the Security Insights Analysis process. Defaults to 5 if nothing specified. This will need to be lowered if heap size or CPU errors occur.</inlineHelpText>
        <label>ExternalUserIdBatch</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Field_Exposure_Batch_User_Access_Rows__c</fullName>
        <description>This controls the number of User Access rows which are processed in a single batch for the Field Exposure Batch. Higher the number, the faster the batch will run. The max is 50,000, but depending on data volume in your org, you may need to lower this in order to avoid CPU Timeout errors in the batch. Default is set at 30,000.</description>
        <inlineHelpText>This controls the number of User Access rows which are processed in a single batch for the Field Exposure Batch. Higher the number, the faster the batch will run. The max is 50,000, but depending on data volume in your org, you may need to lower this in order to avoid CPU Timeout errors in the batch. Default is set at 30,000.</inlineHelpText>
        <label>Field Exposure Batch User Access Rows</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__FlowParserBatch__c</fullName>
        <inlineHelpText>Controls the batch size on the FlowParserBatch in the Platform Encryption Analysis process. Defaults to 50 if nothing specified. This will need to be lowered if heap size errors occur.</inlineHelpText>
        <label>FlowParserBatch</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Get_Most_Recent_External_Users__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>We like to get the most recently logged in external users from each Profile for calculation across the app. If you have millions of external Users, this could be an issue, and you can disab;e this checkbox.</inlineHelpText>
        <label>Get Most Recent External Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__HRP_Objects_per_Fields_Request__c</fullName>
        <description>This is the number of objects we will request fields for in a single batch. If you are experiencing Apex errors on page load, lower this. Raising this number will make the page load faster, but may cause Apex errors. Default is 5. Maximum is 10. Minimum is 1.</description>
        <inlineHelpText>This is the number of objects we will request fields for in a single batch. If you are experiencing Apex errors on page load, lower this. Raising this number will make the page load faster, but may cause Apex errors. Default is 5. Maximum is 10. Minimum is 1.</inlineHelpText>
        <label>HRP Objects per Fields Request</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__HighRiskFieldsAccessBatch__c</fullName>
        <inlineHelpText>Controls the batch size for the HighRiskFieldAccessBatch and HighRiskObjectAccessbatch in the Security Insights Analysis process. Defaults to 15 if nothing specified. Raising this will allow fewer files to be written. It may need to be lowered for orgs with lots of High Risk Fields in Permission Sets.</inlineHelpText>
        <label>HighRiskFieldsAccessBatch</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Migrate_Files__c</fullName>
        <inlineHelpText>Controls the batch size on the MigrateFilesBatch in the migration path process. Defaults to 100 if nothing specified. This will need to be lowered (potentially down to 1) if the files are abnormally large.</inlineHelpText>
        <label>Migrate Files</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Number_of_Records_for_Analysis__c</fullName>
        <label>Number of Records for Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1,000</fullName>
                </value>
                <value>
                    <fullName>10,000</fullName>
                    <default>true</default>
                    <label>10,000</label>
                </value>
                <value>
                    <fullName>100,000</fullName>
                </value>
                <value>
                    <fullName>All Records</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>revcult__ObjectRelationshipsBatch__c</fullName>
        <inlineHelpText>Controls the batch size on the ObjectRelationshipsBatch in the Platform Encryption Analysis process. Defaults to 200 if nothing specified. This will need to be lowered if heap size or CPU errors occur.</inlineHelpText>
        <label>ObjectRelationshipsBatch</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__PEA_Batch_Promises__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do this if you&apos;re getting timeout errors on page load on the js side (e.g. Visualforce Remoting Exception: Unable to connect to the server (transaction aborted: timeout)). This should fix it, but slow down the load.</inlineHelpText>
        <label>PEA Batch Promises</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__PEA_OrgSnapshot__c</fullName>
        <inlineHelpText>Defaults to 200 unless set here. Set the number to gradually lower than 200 if the OrgSnapshot job hits heap limits</inlineHelpText>
        <label>PEA OrgSnapshot</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__PEA_getFields__c</fullName>
        <inlineHelpText>Defaults to 10 unless set here. Set the number to gradually lower than 10 if encountering an apex side issue on page load (e.g. CPU time limit exceeded). Controls how many objects are sent to apex per batch to retrieve fields.</inlineHelpText>
        <label>PEA getFields</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__Policy_Migration_Export__c</fullName>
        <description>This field is used in the Policy Migration component to determine how many Data Classification Field Levels to calculate and import at one time. The default value is 500.</description>
        <label>Policy Migration Export</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__ReportFilterParserBatch__c</fullName>
        <inlineHelpText>Controls the batch size on the ReportFilterParserBatch in the Platform Encryption Analysis process. Defaults to 50 if nothing specified. This will need to be lowered if heap size errors occur.</inlineHelpText>
        <label>ReportFilterParserBatch</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__SI_Fill_Rates_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checking this box will enable the Fill Rates process in Security Insights. Make sure this is disabled if you&apos;re getting issues in Security Insights for any Fill Rates process.</inlineHelpText>
        <label>Fill Rates Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__SetupAuditTrailImpersonatedBatch_Limit__c</fullName>
        <inlineHelpText>Refers to the limit of the query in the start method of SetupAuditTrailImpersonatedBatch. Defaults to 50,000 if not specified. Raise this to capture more results (batch will take longer). Lower it if we&apos;re getting a query timeout.</inlineHelpText>
        <label>SetupAuditTrailImpersonatedBatch Limit</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__ShieldAcceleratorAnalyzerBatch__c</fullName>
        <inlineHelpText>Controls the batch size on the ShieldAcceleratorAnalyzerBatch in the Platform Encryption Analysis process. Defaults to 500 if nothing specified. This will need to be lowered if heap size errors occur.</inlineHelpText>
        <label>ShieldAcceleratorAnalyzerBatch</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__WSWE_Enable_User_Section_Loading__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a switch that will allow the User Population Filters to appear in the Who Sees What Explorer. These filters allow you to view a subset of your User population in the tool. This will help load all of the information we need to display in the Who Sees What Explorer in very large Salesforce Orgs. North of 2500 Users could warrant this switch being enabled.</description>
        <inlineHelpText>This is a switch that will allow the User Population Filters to appear in the Who Sees What Explorer. These filters allow you to view a subset of your User population in the tool. This will help load all of the information we need to display in the Who Sees What Explorer in very large Salesforce Orgs. North of 2500 Users could warrant this switch being enabled.</inlineHelpText>
        <label>WSWE Enable User Section Loading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__WSW_Enable_Time_Machine__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only Enable the time machine if the org has a small number of users and permission sets.</inlineHelpText>
        <label>WSW Enable Time Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revcult__WSW_getAccess__c</fullName>
        <inlineHelpText>Defaults to 3,000 unless set here. Set the number lower (e.g., 2,000) if encountering an apex side issue on Records lens load (e.g., Too many query rows: 50,001). This controls how many records are sent to apex per batch to retrieve user access.</inlineHelpText>
        <label>WSW getAccess</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__WSW_getFieldPermissions__c</fullName>
        <inlineHelpText>Defaults to 10 unless set here. Gradually set the number to lower than 10 if encountering the remote response exceeded 15 MB error while trying to load a user in the User Lens. Controls how many permission set ids are sent to apex per batch to retrieve field permissions</inlineHelpText>
        <label>WSW getFieldPermissions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__WSW_getFields__c</fullName>
        <inlineHelpText>Defaults to 10 unless set here. Set the number to gradually lower than 10 if encountering an apex side issue on User lens load (e.g. CPU time limit exceeded). Controls how many objects are sent to apex per batch to retrieve fields.</inlineHelpText>
        <label>WSW getFields</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__WSW_multiObjectExport_objects__c</fullName>
        <inlineHelpText>Defaults to 30 unless set here. Set the number to gradually lower than 30 if encountering javascript issues. Controls how many objects are sent to apex per batch to retrieve user access records.</inlineHelpText>
        <label>WSW Multi Object Export - Objects</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revcult__WSW_multiObjectExport_users__c</fullName>
        <inlineHelpText>Defaults to 10000 unless set here. Set the number lower than 10000 if encountering javascript issues. Controls how many users are sent to apex per batch to retrieve user access records.</inlineHelpText>
        <label>WSW Multi Object Export - Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Batch Configuration</label>
    <pluralLabel>Batch Configurations</pluralLabel>
</CustomObject>